--- a/CacelApp/Views/Modulos/Produccion/RegistroRapidoProduccion.xaml
+++ b/CacelApp/Views/Modulos/Produccion/RegistroRapidoProduccion.xaml
@@ -93,20 +93,21 @@
 
         <!-- Header -->
         <Border Grid.Row="0" 
-                Background="{StaticResource VivoPrimaryBrush}"
                 Padding="24,20">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                 <materialDesign:PackIcon Kind="ScaleBalance" 
                                          Width="32" 
                                          Height="32" 
-                                         Foreground="White"
+                                          Foreground="{DynamicResource MaterialDesignBody}"
                                          VerticalAlignment="Center" 
                                          Margin="0,0,15,0"/>
                 <TextBlock Text="Estación de Pesaje de Materiales"
                            FontSize="24"
                            FontWeight="Bold"
-                           Foreground="White"/>
+                            Foreground="{DynamicResource MaterialDesignBody}"/>
             </StackPanel>
+
+            
         </Border>
 
         <!-- Content -->
