--- a/CacelApp/Shared/Controls/DataTable/DataTableControl.xaml
+++ b/CacelApp/Shared/Controls/DataTable/DataTableControl.xaml
@@ -185,7 +185,13 @@
                   GridLinesVisibility="None"
                   Margin="0,0,0,0"
                   materialDesign:DataGridAssist.CellPadding="12,8"
-                  materialDesign:DataGridAssist.ColumnHeaderPadding="12,10">
+                  materialDesign:DataGridAssist.ColumnHeaderPadding="12,10"
+                  EnableRowVirtualization="True"
+                  EnableColumnVirtualization="True"
+                  VirtualizingPanel.IsVirtualizing="True"
+                  VirtualizingPanel.VirtualizationMode="Recycling"
+                  VirtualizingPanel.CacheLength="20"
+                  VirtualizingPanel.CacheLengthUnit="Item">
             
             <!-- Template para detalles expandibles de la fila -->
             <DataGrid.RowDetailsTemplate>
